# Test-to-create-CI

./: CMakeLists.txt  README.md  try_adding.py
.github/workflows/: cmake-single-platform.yml  python-package.yml
src/: CMakeLists.txt  add.cpp
src/cpp_src/: add.h
tests/: CMakeLists.txt  test_add.cpp  test_add.py
tests/cpp_tests/: CMakeLists.txt  test_add.cpp
tests/py_tests/: test_add.py
